# Djaizz

./: .gitignore  .prospector.yaml  .travis.yml  LICENSE  Makefile  README.md  install-editable-dev  install-editable-dev.bat  install-mac-deps  poetry-add-deps  poetry-add-deps.bat  pyproject-poetry.toml  pyproject-setuptools.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: install.yml
docs/: .env.template  .gitignore  _django_project_settings.py  build  conf.py  djai.client.html  djai.data.admin.html  djai.data.api.gql.html  djai.data.api.html  djai.data.api.json.html  djai.data.api.rest.html  djai.data.apps.html  djai.data.html  djai.data.models.audio.html  djai.data.models.base.html  djai.data.models.csv.html  djai.data.models.hdf.html  djai.data.models.html  djai.data.models.image.html  djai.data.models.json.html  djai.data.models.live_api.html  djai.data.models.numpy.html  djai.data.models.orc.html  djai.data.models.pandas.html  djai.data.models.parquet.html  djai.data.models.public.gov.html  djai.data.models.public.html  djai.data.models.public.hugging_face.html  djai.data.models.public.intl_dev.html  djai.data.models.public.kaggle.html  djai.data.models.public.tf.html  djai.data.models.public.torch.html  djai.data.models.public.weather.html  djai.data.models.text.html  djai.data.models.tfrecord.html  djai.data.models.video.html  djai.data.urls.html  djai.html  djai.model.admin.html  djai.model.api.gql.html  (+76 more)
docs/_static/: documentation_options.js
metadata/: classifiers  description  entry-points  version
metadata/requirements/: base.txt  build.txt  dev.txt  doc.txt  gpu.txt  lint.txt  publish.txt  test.txt  viz.txt
requirements/: doc.txt
src/djai/: __init__.py  urls.py
src/djai/client/: __init__.py
src/djai/data/: apps.py  urls.py
src/djai/data/api/: __init__.py
src/djai/data/migrations/: 0001_DataSchema_DataSet.py
src/djai/data/models/: __init__.py  audio.py  base.py  csv.py  hdf.py  image.py  json.py  live_api.py  numpy.py  orc.py  pandas.py  parquet.py  text.py  tfrecord.py  video.py
src/djai/data/models/public/: tf.py  torch.py  weather.py
src/djai/model/: admin.py  apps.py  urls.py  views.py
src/djai/model/api/: __init__.py
src/djai/model/migrations/: 0002_PreTrainedKerasImageNetClassifier.py  0003_PreTrainedHuggingFaceTransformers.py  0004_CloudAIService.py  0005_GoogleTranslate.py
src/djai/model/models/: __init__.py  base.py
src/djai/model/models/cloud_ai_svc/: __init__.py  base.py
src/djai/model/models/cloud_ai_svc/amazon/: __init__.py
src/djai/model/models/cloud_ai_svc/google/: __init__.py  translation.py
src/djai/model/models/cloud_ai_svc/hugging_face/: __init__.py
src/djai/model/models/cloud_ai_svc/meta/: __init__.py
src/djai/model/models/cloud_ai_svc/wolfram_alpha/: __init__.py
src/djai/model/models/ml/: __init__.py  base.py  skl.py
src/djai/model/models/ml/hugging_face/: __init__.py  audio_classification.py  base.py  image_classification.py  mask_filling.py  object_detection.py  question_answering.py  speech_recognition.py  table_question_answering.py  text2text_generation.py  text_classification.py  text_generation.py  text_summarization.py  token_classification.py  translation.py  zero_shot_classification.py
src/djai/model/models/ml/keras/: __init__.py  base.py
src/djai/model/models/ml/torch/: __init__.py  base.py
src/djai/model/scripts/: setup_google_cloud_ai_svcs.py  setup_pretrained_huggingface_models.py  setup_pretrained_keras_models.py
src/djai/model/templates/: DjAI-Model-Dash-App.html
src/djai/util/: __init__.py  git.py  models.py  pip.py  views.py
src/djai/util/cli/: __init__.py  run_cmd.py
src/djai/util/cli/_server_files/: Procfile.Uvicorn  asgi.py  manage.py  wsgi.py
src/djai/util/cli/aws_eb/: .ebignore  README.md  __init__.py
src/djai/util/cli/aws_eb/.ebextensions/: .Django.config  Django-App.config  Django.config  Launch.config  autoscaling.config  django.config
src/djai/util/cli/aws_eb/.elasticbeanstalk/: config.yml
src/djaizz/: __init__.py  urls.py
src/djaizz/client/: __init__.py
src/djaizz/contrib/: __init__.py
src/djaizz/core/: __init__.py
src/djaizz/core/data/: apps.py  urls.py
src/djaizz/core/data/migrations/: 0003_Django4.py
src/djaizz/core/data/models/: __init__.py  audio.py  orc.py  pandas.py
src/djaizz/core/data/models/public/: __init__.py
src/djaizz/core/model/: admin.py  urls.py  views.py
src/djaizz/core/model/migrations/: 0003_PreTrainedHuggingFaceTransformers.py  0004_CloudAIService.py  0005_GoogleTranslate.py  0006_Django4.py
src/djaizz/core/model/models/cloud_ai_svc/: __init__.py  base.py
src/djaizz/core/model/models/ml/: __init__.py  base.py
src/djaizz/core/model/scripts/: setup_google_cloud_ai_svcs.py  setup_pretrained_huggingface_models.py
src/djaizz/data/: admin.py  apps.py  urls.py
src/djaizz/data/api/: __init__.py
src/djaizz/data/migrations/: 0001_DataSchema_DataSet.py  0002_InDBJSONDataSet.py
src/djaizz/data/models/: __init__.py  base.py  csv.py  json.py  live_api.py  orc.py  parquet.py  tfrecord.py  video.py
src/djaizz/data/models/public/: __init__.py  gov.py  hugging_face.py  intl_dev.py  kaggle.py  tf.py  torch.py  weather.py
src/djaizz/model/: admin.py  apps.py  urls.py  views.py
src/djaizz/model/api/: __init__.py
src/djaizz/model/migrations/: 0001_AIModel.py  0002_PreTrainedKerasImageNetClassifier.py
src/djaizz/model/models/: __init__.py  base.py
src/djaizz/model/models/cloud_ai_svc/: base.py
src/djaizz/model/models/cloud_ai_svc/amazon/: __init__.py
src/djaizz/model/models/cloud_ai_svc/google/: __init__.py  translation.py
src/djaizz/model/models/cloud_ai_svc/ibm_watson/: __init__.py
src/djaizz/model/models/ml/: base.py
src/djaizz/model/models/ml/hugging_face/: base.py  (+14 more)
src/djaizz/model/scripts/: setup_pretrained_keras_models.py
src/djaizz/util/: __init__.py  git.py  pip.py  views.py
src/djaizz/util/cli/: __init__.py  deps.py  run_cmd.py
src/djaizz/util/cli/_server_files/: asgi.py  wsgi.py
src/djaizz/util/cli/aws_eb/: .ebignore  EC2-Instance-Types.yml  README.md  __init__.py
(+64 files in other folders)
