# python-poetry.org/docs/pyproject


[tool.poetry]
name = 'Djaizz'
version = '0.0.0.dev0'

description = 'Artificial Intelligence (AI) in Django Applications'

license = 'MIT'

authors = [
  'STEAM for Vietnam Foundation AI & Robotics Educational Initiative <Edu.AI@STEAMforVietNam.org>'
]
maintainers = [
  'STEAM for Vietnam Foundation AI & Robotics Educational Initiative <Edu.AI@STEAMforVietNam.org>'
]

readme = 'README.md'

homepage = 'https://GitHub.com/Djaizz/Djaizz'
repository = 'https://GitHub.com/Djaizz/Djaizz'
documentation = 'https://Djaizz.GitHub.io/Djaizz'

keywords = [
  'Django',

  'Artificial Intelligence',
  'A.I.',
  'AI',

  'application',
  'app',
]

classifiers = [
  'Development Status :: 3 - Alpha',
  # 'Development Status :: 4 - Beta',
  # 'Development Status :: 5 - Production/Stable',
  # 'Development Status :: 6 - Mature',
  'Environment :: MacOS X',
  'Environment :: Win32 (MS Windows)',
  'Framework :: Dash',
  'Framework :: Django',
  'Framework :: Django :: 4.0',
  'Framework :: IPython',
  'Framework :: Jupyter',
  'Framework :: Jupyter :: JupyterLab',
  'Framework :: Jupyter :: JupyterLab :: 4',
  'Framework :: Kedro',
  'Framework :: Matplotlib',
  'Intended Audience :: Developers',
  'Intended Audience :: Education',
  'Intended Audience :: Financial and Insurance Industry',
  'Intended Audience :: Healthcare Industry',
  'Intended Audience :: Information Technology',
  'Intended Audience :: Legal Industry',
  'Intended Audience :: Manufacturing',
  'Intended Audience :: Science/Research',
  'Intended Audience :: System Administrators',
  'Intended Audience :: Telecommunications Industry',
  'Operating System :: MacOS',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Microsoft',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Microsoft :: Windows :: Windows 7',
  'Operating System :: Microsoft :: Windows :: Windows 8',
  'Operating System :: Microsoft :: Windows :: Windows 8.1',
  'Operating System :: Microsoft :: Windows :: Windows 10',
  'Operating System :: OS Independent',
  'Operating System :: Other OS',
  'Operating System :: POSIX',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Education',
  'Topic :: Home Automation',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Astronomy',
  'Topic :: Scientific/Engineering :: Atmospheric Science',
  'Topic :: Scientific/Engineering :: Bio-Informatics',
  'Topic :: Scientific/Engineering :: Chemistry',
  'Topic :: Scientific/Engineering :: GIS',
  'Topic :: Scientific/Engineering :: Human Machine Interfaces',
  'Topic :: Scientific/Engineering :: Hydrology',
  'Topic :: Scientific/Engineering :: Image Processing',
  'Topic :: Scientific/Engineering :: Image Recognition',
  'Topic :: Scientific/Engineering :: Information Analysis',
  'Topic :: Scientific/Engineering :: Mathematics',
  'Topic :: Scientific/Engineering :: Medical Science Apps.',
  'Topic :: Scientific/Engineering :: Physics',
  'Topic :: Scientific/Engineering :: Visualization',
  'Topic :: Software Development',
  'Topic :: Software Development :: Libraries',
  'Topic :: Software Development :: Libraries :: Application Frameworks',
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Topic :: Software Development :: User Interfaces',
  'Topic :: Software Development :: Widget Sets',
]

packages = [
  {include = 'djaizz', from = 'src'}
]

include = []
exclude = []


[tool.poetry.dependencies]
Python = '>= 3.8, < 3.12, !=3.9.7'  # !=3.9.7 for Streamlit
dask = ">=2023.2.1"
distributed = ">=2023.2.1"
metaflow = ">=2.8.0"
numba = {version = ">=0.56.4", markers = "python_version < \"3.11\""}
numpy = ">=1.23.5"
pandas = ">=1.5.3"
pandarallel = ">=1.6.4"
pyarrow = ">=11.0.0"
pyspark = ">=3.3.2"
ray = {version = ">=1.13.0", markers = "python_version < \"3.11\""}
scipy = ">=1.10.1"
pillow = ">=9.4.0"
scikit-image = ">=0.19.3"
kedro = {version = ">=0.18.5", markers = "python_version < \"3.11\""}
imbalanced-learn = ">=0.10.1"
statsmodels = ">=0.13.5"
scikit-learn = ">=1.2.1"
tensorflow = ">=2.12.0rc0"
tensorflow-datasets = ">=4.8.3"
tensorflow-hub = ">=0.12.0"
torch = {version = ">=1.13.1", markers = "python_version < \"3.11\""}
torch-model-archiver = ">=0.7.1"
torchserve = ">=0.7.1"
torchaudio = {version = ">=0.13.1", markers = "python_version < \"3.11\""}
torchtext = {version = ">=0.14.1", markers = "python_version < \"3.11\""}
torchvision = {version = ">=0.14.1", markers = "python_version < \"3.11\""}
opencv-python = ">=4.7.0"
datasets = ">=2.10.0"
huggingface-hub = ">=0.12.1"
transformers = ">=4.26.1"
sentencepiece = ">=0.1.97"
timm = {version = ">=0.6.12", markers = "python_version < \"3.11\""}
giotto-tda = {version = ">=0.6.0", markers = "python_version < \"3.11\""}
gudhi = ">=3.7.1"
googletrans = ">=4.0.0rc1"
bayesian-optimization = ">=1.4.2"
configspace = ">=0.6.1"
hpbandster = ">=0.7.4"
tabulate = ">=0.9.0"
lime = ">=0.2.0.1"
shap = {version = ">=0.41.0", markers = "python_version < \"3.11\""}
scikit-fuzzy = ">=0.4.2"
fsspec = ">=2023.1.0"
cloudpickle = ">=2.2.1"
joblib = ">=1.2.0"
django = ">=4.1.7"
django-polymorphic = ">=3.1.0"
django-admin-hstore-widget = ">=1.2.1"
django-admin-relation-links = ">=0.2.5"
django-grappelli = ">=3.0.4"
django-jazzmin = ">=2.6.0"
django-autocomplete-light = ">=3.9.4"
django-generic-m2m = ">=0.3.1"
django-gm2m = ">=1.1.1"
django-querysetsequence = ">=0.16"
django-tagging = ">=0.5.0"
django-taggit = ">=3.1.0"
ariadne = ">=0.18.1"
django-graphql-extensions = ">=0.1.0"
django-restql = ">=0.15.3"
gql = ">=3.4.0"
graphene = ">=3.2.1"
graphene-django = ">=3.0.0"
graphene-django-optimizer = ">=0.9.1"
graphqlclient = ">=0.2.4"
graphql-core = ">=3.2.3"
graphql-relay = ">=3.2.0"
py-gql = ">=0.6.1"
sgqlc = ">=16.1"
strawberry-graphql = ">=0.159.0"
djangorestframework = ">=3.14.0"
drfpasswordless = ">=1.5.8"
drf-writable-nested = ">=0.6.4"
coreapi = ">=2.3.3"
coreapi-cli = ">=1.0.9"
markdown = ">=3.4.1"
djangorestframework-jsonapi = ">=6.0.0"
drf-nested-routers = ">=0.93.4"
django-polymodels = ">=1.7.0"
django-typed-models = ">=0.12.0"
hal-codec = ">=1.0.2"
jsonhyperschema-codec = ">=1.0.3"
openapi-codec = ">=1.3.2"
jsonschema = ">=4.17.3"
pydantic = ">=1.10.5"
httpie = ">=3.2.1"
django-filter = ">=22.1"
djangorestframework-filters = ">=1.0.0.dev2"
django-guardian = ">=2.4.0"
rules = ">=3.3"
django-debug-toolbar = ">=3.8.1"
django-query-profiler = ">=0.9"
django-silk = ">=5.0.3"
kolo = ">=2.4.2"
django-annoying = ">=0.10.6"
django-choices = ">=1.7.2"
django-compressor = ">=4.3.1"
django-configurations = ">=2.4"
django-crispy-forms = ">=2.0"
django-environ = ">=0.9.0"
django-extensions = ">=3.2.1"
django-json-widget = ">=1.1.1"
django-localflavor = ">=3.1"
django-nested-inlines = ">=0.1"
django-storages = ">=1.13.2"
django-query-graph = ">=0.0.0.dev1"
dj-util = ">=0.0.0.dev1"
django-cors-headers = ">=3.14.0"
django-htmx = ">=1.14.0"
gradio = ">=3.19.1"
streamlit = ">=1.19.0"
watchdog = ">=2.3.0"
mariadb-dyncol = ">=3.6.1"
django-mysql = ">=4.9.0"
mysqlclient = ">=2.1.1"
mysql-connector-python = ">=8.0.32"
psycopg2-binary = ">=2.9.5"
asgiref = ">=3.6.0"
channels = ">=4.0.0"
daphne = ">=4.0.0"
gunicorn = ">=20.1.0"
hypercorn = ">=0.14.3"
quart = ">=0.18.3"
starlette = ">=0.25.0"
uvicorn = ">=0.20.0"
click = ">=8.1.3"
colored = ">=1.4.4"
gitpython = ">=3.1.31"
ruamel-yaml = ">=0.17.21"
psutil = ">=5.9.4"
python-dateutil = ">=2.8.2"
python-dotenv = ">=1.0.0"
pytz = ">=2022.7.1"
requests = ">=2.28.2"
tqdm = ">=4.64.1"


[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]


[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]


[tool.poetry.group.publish]
optional = true

[tool.poetry.group.publish.dependencies]


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]


[tool.poetry.group.viz]
optional = true

[tool.poetry.group.viz.dependencies]


[tool.poetry.scripts]
djaizz = 'djai.util.cli:djaizz'


[tool.poetry.extras]
# python-poetry.org/docs/pyproject#extras
# The dependencies specified for each extra must already be defined as project dependencies
# Dependencies listed in dependency groups cannot be specified as extras
build = []
dev = []
doc = []
lint = []
publish = []
test = []
viz = []


[tool.poetry.plugins]

[tool.poetry.plugins."blogtool.parsers"]


[tool.poetry.urls]
GitHub = 'https://GitHub.com/Djaizz/Djaizz'


[build-system]
requires = [
  'Poetry-Core >= 1.5.1',
]
build-backend = 'poetry.core.masonry.api'
