# python.org/dev/peps/pep-0621
# setuptools.pypa.io/en/latest/userguide/pyproject_config.html


[project]
name = 'Djaizz'

keywords = [
  'Django',

  'Artificial Intelligence',
  'A.I.',
  'AI',

  'application',
  'app',
]

readme = {file = 'README.md', content-type = 'text/markdown', charset = 'UTF-8'}

requires-python = '>= 3.8'

license = {file = 'LICENSE'}

authors = [
  {name = 'STEAM for Vietnam Foundation: AI, IoT & Robotics Educational Initiative', email = 'Edu.AI@STEAMforVietNam.org'}
]
maintainers = [
  {name = 'STEAM for Vietnam Foundation: AI, IoT & Robotics Educational Initiative', email = 'Edu.AI@STEAMforVietNam.org'}
]


dynamic = [
  'version',

  'description',

  'classifiers',

  'dependencies',
  'optional-dependencies',

  'entry-points',
  'scripts',  # ?
  'gui-scripts',  # ?
]


[project.urls]
Homepage = 'https://GitHub.com/Djaizz/Djaizz'
Repository = 'https://GitHub.com/Djaizz/Djaizz'
GitHub = 'https://GitHub.com/Djaizz/Djaizz'
Documentation = 'https://Djaizz.GitHub.io/Djaizz'


[tool.setuptools]
# setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools-specific-configuration

# platforms = []  # array

zip-safe = true

# eager-resources = []  # array

py-modules = []

# packages = []  # array or find directive

# package-dir = {}  # table/inline-table, used when explicitly listing packages

# namespace-packages = []  # array, deprecated

package-data = {}  # table/inline-table

include-package-data = true

exclude-package-data = {}  # table/inline-table

license-files = ['LICEN[CS]E*']  # array of glob patterns

data-files = {}  # table/inline-table, discouraged

# script-files = []  # array, deprecated

provides = []  # array, ignored by pip

obsoletes = []  # array, ignored by pip


[tool.setuptools.packages.find]
where = ['src']
include = ['*']
exclude = []
namespaces = true


[tool.setuptools.dynamic]
version = {file = 'metadata/version'}

description = {file = 'metadata/description'}

classifiers = {file = 'metadata/classifiers'}

dependencies = {file = 'metadata/requirements/base.txt'}

entry-points = {file = 'metadata/entry-points'}
# scripts = {file = 'metadata/scripts'}
# gui-scripts = {file = 'metadata/gui-scripts'}


[tool.setuptools.dynamic.optional-dependencies]
build = {file = 'metadata/requirements/build.txt'}
dev = {file = 'metadata/requirements/dev.txt'}
doc = {file = 'metadata/requirements/doc.txt'}
lint = {file = 'metadata/requirements/lint.txt'}
publish = {file = 'metadata/requirements/publish.txt'}
test = {file = 'metadata/requirements/test.txt'}
viz = {file = 'metadata/requirements/viz.txt'}


[build-system]
requires = [
  'SetUpTools >= 67.4.0',
  'Wheel >= 0.38.4',
]
build-backend = 'setuptools.build_meta'
