# pip.pypa.io/en/stable/reference/build-system/pyproject-toml/#editable-installation
# setuptools.pypa.io/en/latest/userguide/quickstart.html?highlight=editable#development-mode

# setuptools.readthedocs.io/en/latest/userguide/declarative_config.html


[metadata]
name = DjAI
version = attr: djai.__version__

url = GitHub.com/Django-AI/DjAI
download_url = GitHub.com/Django-AI/DjAI/archive/main.zip

author = STEAM for Vietnam Foundation: AI & Robotics Educational Initiative
author_email = Edu.AI@STEAMforVietNam.org
maintainer = STEAM for Vietnam Foundation: AI & Robotics Educational Initiative
maintainer_email = Edu.AI@STEAMforVietNam.org

classifiers =
  Development Status :: 2 - Pre-Alpha
  Environment :: MacOS X
  Environment :: Win32 (MS Windows)
  Framework :: Django
  Framework :: Django :: 3.2
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Financial and Insurance Industry
  Intended Audience :: Healthcare Industry
  Intended Audience :: Information Technology
  Intended Audience :: Legal Industry
  Intended Audience :: Manufacturing
  Intended Audience :: Science/Research
  Intended Audience :: System Administrators
  Intended Audience :: Telecommunications Industry
  License :: OSI Approved :: MIT License
  Operating System :: MacOS
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft
  Operating System :: Microsoft :: Windows
  Operating System :: Microsoft :: Windows :: Windows 7
  Operating System :: Microsoft :: Windows :: Windows 8
  Operating System :: Microsoft :: Windows :: Windows 8.1
  Operating System :: Microsoft :: Windows :: Windows 10
  Operating System :: OS Independent
  Operating System :: Other OS
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Education
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Human Machine Interfaces
  Topic :: Scientific/Engineering :: Image Processing
  Topic :: Scientific/Engineering :: Image Recognition
  Topic :: Scientific/Engineering :: Information Analysis
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Scientific/Engineering :: Visualization
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Libraries :: Python Modules

license = MIT

description = Artificial Intelligence in Django Apps
long_description = file: README.md
long_description_content_type = text/markdown

keywords =
  Django
  Artificial Intelligence
  AI


[options]
zip_safe = False

setup_requires =

install_requires =

python_requires = >= 3.8

scripts =

include_package_data = True

packages = find:

package_dir =
  =src

namespace_packages =

py_modules =

[options.entry_points]
console_scripts =
  djai = djai.util.cli:djai

[options.extras_require]
doc =
  # Sphinx & related
  Sphinx >= 4.2.0
  Sphinx-AutoBuild >= 2021.3.14
  SphinxContrib-JSMath >= 1.0.1

  # Markdown
  CommonMark >= 0.9.1
  MyST-Parser >= 0.15.2
  ReCommonMark >= 0.7.1

lint =
  Bandit >= 1.7.0
  Flake8 >= 4.0.1
  MyPy >= 0.910
  Prospector >= 1.5.1
  PyCodeStyle >= 2.8.0
  PyDocStyle >= 6.1.1
  PyLama >= 7.7.1
  PyLint >= 2.11.1

[options.packages.find]
where = src
exclude =
include =
  *
