# pip.pypa.io/en/stable/reference/build-system/pyproject-toml/#editable-installation
# setuptools.pypa.io/en/latest/userguide/quickstart.html?highlight=editable#development-mode

# setuptools.readthedocs.io/en/latest/userguide/declarative_config.html


[metadata]
name = DjAI
version = attr: djai.__version__

url = GitHub.com/Django-AI/DjAI
download_url = GitHub.com/Django-AI/DjAI/archive/main.zip

author = STEAM for Vietnam Foundation: AI & Robotics Educational Initiative
author_email = Edu.AI@STEAMforVietNam.org
maintainer = STEAM for Vietnam Foundation: AI & Robotics Educational Initiative
maintainer_email = Edu.AI@STEAMforVietNam.org

classifiers =

license = MIT

description = Artificial Intelligence (AI) in Django Applications
long_description = file: README.md
long_description_content_type = text/markdown

keywords =
  Django
  Artificial Intelligence
  AI


[options]
zip_safe = False

setup_requires =

install_requires =

python_requires = >= 3.8

scripts =

include_package_data = True

packages = find:

package_dir =
  =src

namespace_packages =

py_modules =

[options.entry_points]
console_scripts =
  djai = djai.util.cli:djai

[options.extras_require]
doc =
  # Sphinx & related
  Sphinx >= 4.2.0
  Sphinx-AutoBuild >= 2021.3.14
  SphinxContrib-JSMath >= 1.0.1

  # Markdown
  CommonMark >= 0.9.1
  MyST-Parser >= 0.15.2
  ReCommonMark >= 0.7.1

lint =
  Bandit >= 1.7.0
  Flake8 >= 4.0.1
  MyPy >= 0.910
  Prospector >= 1.5.1
  PyCodeStyle >= 2.8.0
  PyDocStyle >= 6.1.1
  PyLama >= 7.7.1
  PyLint >= 2.11.1

[options.packages.find]
where = src
exclude =
include =
  *
