# pip.pypa.io/en/stable/reference/build-system/pyproject-toml/#editable-installation
# setuptools.pypa.io/en/latest/userguide/quickstart.html?highlight=editable#development-mode

# setuptools.readthedocs.io/en/latest/userguide/declarative_config.html


[metadata]
name = Djaizz
version = 0.0.0.dev15

url = GitHub.com/Djaizz/Djaizz
download_url = GitHub.com/Djaizz/Djaizz/archive/main.zip

author = STEAM for Vietnam Foundation: AI & Robotics Educational Initiative
author_email = Edu.AI@STEAMforVietNam.org
maintainer = STEAM for Vietnam Foundation: AI & Robotics Educational Initiative
maintainer_email = Edu.AI@STEAMforVietNam.org

classifiers =

license = MIT

description = Artificial Intelligence (AI) in Django Applications
long_description = file: README.md
long_description_content_type = text/markdown

keywords =
  Django

  Artificial Intelligence
  A.I.
  AI

  application
  app


[options]
zip_safe = False

setup_requires =

install_requires =

python_requires = >= 3.8

scripts =

include_package_data = True

packages = find_namespace:

package_dir =
  =src

# namespace_packages =   # DEPRECATED

py_modules =

[options.entry_points]
console_scripts =
  djai = djai.util.cli:djai

[options.extras_require]
doc =

lint =

test =

viz =

[options.packages.find]
where = src
exclude =
include =
  *
